# Dan's note to self:
   * setup appropriate test in grid/grid_test.py
   * update CHANGES.txt
   * update setup.py
   * update MANIFEST.in (if necessary)
   * python setup.py sdist
   * test in virtualenv
   * git add, commit, push
   * python setup.py sdist upload
August 23, 2013
 * Fixed grid centering and array reading for .uv.h5 files

August 21, 2013
 * Added MDF .uv.h5 reader and appropriate parser in gridconvert.py

July 29, 2013
 * Removed tables requirement (not all users need tables)

July 19, 2013
 * Added Accelrys .grd output format
 * Modified input format of gridconvert.py

July 11th, 2013
 * Tentative function to MDF-3D-RISM HDF5 distributions 'h5ToGrids'

June 19, 2013
0.2.0
 * Cleaned up some docstrings
 * Added openreadfile command to allow reading gzipped files (ending in .gz)
 * Changed readdx to use only one dx file at a time.
 * Now using numpy.reshape to convert 1dlist to 3d numpy array. (For distributions)
 * Now can read UxDATA files (produced from legacy GAMESS-type 3D-RISM code)
 * Now can read TINKER guv files (produces from legacy TINKER-type 3D-RISM code)
 * Added gridconvert.py to convert volumetric data files.

June 11, 2013
0.1.8
  1) Significant optimization to linear interpolation (~60% speedup) due to use of trilinear interpolation formula
  2) Added linear interpolation test (assertion)

June 11, 2013
0.1.7.1
  Accidentally left some IPython in.
Jun 10, 2013
0.1.7
  Slight optimizations to interpolation. ~5% speed increase.

May 21, 2013
0.1.6
  Converted to ipython notebook for fast debugging.
  Now returns False value whenever linearinterpolatevalue() fails.


April 1, 2013
0.1.5
  Forgot to add bin/ directory
0.1.4
  Added RDFfromDX.py script
0.1.3
  Changed RDF to interpolate from 200 points
  Added simple RDF tests
Mar 20, 2013
0.1.2
  Allowed dx reader to read different dx formats.

0.1.1
  - Fixed bug in getlinearweightsandindices in the case of lying exactly
    on a grid point.