@@ -120,6 +120,7 @@
       "        coord,\n",
       "        delta,\n",
       "        limit,\n",
+      "        concentration = False # If not False, print coordination number\n",
       "        ):\n",
       "        '''\n",
       "        Given 3D cartesian coordinate (list-like object of floats),\n",
@@ -136,18 +137,25 @@
       "        spherepoints = [[float(element) for element in line.split()]\n",
       "                        for line in open(spherefilename).readlines()]\n",
       "        rdf = []\n",
+      "        volints = [0.]\n",
       "        for radius in np.arange(0, limit, delta):\n",
       "            mysum = 0\n",
       "            for point in spherepoints:\n",
       "                mysum += self.getvalue([point[dim] * radius\n",
       "                        + coord[dim] for dim in range(3)])\n",
       "            rdf.append(float(mysum / len(spherepoints)))\n",
-      "        return rdf"
+      "            if radius > 0:\n",
+      "                volints.append(volints[-1] + 4./3. * 3.14159 * (radius**3 - (radius-delta)**3))\n",
+      "        if not concentration:\n",
+      "            return rdf\n",
+      "        else:\n",
+      "            coordnums = [volint * concentration for volint in volints]\n",
+      "            return rdf, coordnums"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
